# hebtts-backend

./: .gitignore  =0.5.12  Dockerfile  README.md  chunked_inference.py  docker-compose.yml  handler.py  requirements.txt  test_api.py  test_api.sh  test_app.py  test_minimal.py  text_chunker.py
HebTTSLM/: .gitignore  README.md  example.csv  infer.py  pyproject.toml
HebTTSLM/valle/data/: collation.py
