[project]
name = "hebtts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "audiocraft>=1.3.0",
    "encodec>=0.1.1",
    "gdown>=5.2.0",
    "lhotse",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "numpy<2",
    "omegaconf>=2.3.0",
    "phonemizer>=3.3.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "torchmetrics>=1.7.2",
]

[tool.uv.sources]
lhotse = { git = "https://github.com/lhotse-speech/lhotse" }
